restructured the structure

--- a/index.html
+++ b/index.html
@@ -1,74 +1,90 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <meta charset="utf-8" />
-  <title>Alex Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <script type="text/javascript">
-    //<![CDATA[
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-56895490-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-      var ga = document.createElement('script');
-      ga.type = 'text/javascript';
-      ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(ga, s);
-    })(); //]]>
-  </script>
-  <script type="text/javascript">
-    //<![CDATA[
-    try {
-      if (!window.CloudFlare) {
-        var CloudFlare = [{
-          verbose: 0,
-          p: 0,
-          byc: 0,
-          owlid: "cf",
-          bag2: 1,
-          mirage2: 0,
-          oracle: 0,
-          paths: {
-            cloudflare: "/cdn-cgi/nexp/dok3v=1613a3a185/"
-          },
-          atok: "de90e47251089f325c5e5ee966c84fa3",
-          petok: "f449f151d1ed12772499c34aca51f93e6adaad1c-1499677223-1800",
-          zone: "revox.io",
-          rocket: "0",
-          apps: {
-            "ga_key": {
-              "ua": "UA-56895490-1",
-              "ga_bs": "1"
-            }
-          }
-        }];
-        ! function(a, b) {
-          a = document.createElement("script"), b = document.getElementsByTagName("script")[0], a.async = !0, a.src = "//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js", b.parentNode.insertBefore(a, b)
-        }()
-      }
-    } catch (e) {};
-    //]]>
-  </script>
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-touch-fullscreen" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta content="" name="description" />
-  <meta content="" name="author" />
+  <meta charset="utf-8">
+  <meta name="robots" content="all,follow">
+  <meta name="googlebot" content="index,follow,snippet,archive">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css" />
-  <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="assets/plugins/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
-  <link href="assets/plugins/swiper/css/swiper.css" rel="stylesheet" type="text/css" media="screen" />
+  <title>IT Worker | responsive portfolio template</title>
 
+  <meta name="keywords" content="">
 
-  <link class="main-stylesheet" href="pages/css/pages.css" rel="stylesheet" type="text/css" />
-  <link class="main-stylesheet" href="pages/css/pages-icons.css" rel="stylesheet" type="text/css" />
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,100%7CRoboto:400,700,300,100' rel='stylesheet' type='text/css'>
 
+  <!-- Bootstrap and Font Awesome css -->
+  <link href="css/font-awesome.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Theme stylesheet -->
+  <link href="css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+
+  <!-- Custom stylesheet - for your changes -->
+  <link href="css/custom.css" rel="stylesheet">
+
+  <!-- owl carousel css -->
+
+  <link href="css/owl.carousel.css" rel="stylesheet">
+  <link href="css/owl.theme.css" rel="stylesheet">
+
+  <!-- CSS Animations -->
+  <link href="css/animate.css" rel="stylesheet">
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="favicon.png">
+
+  <!-- Mordernizr -->
+  <script src="js/modernizr-2.6.2.min.js"></script>
+
+  <!-- Responsivity for older IE -->
+  <!--[if lt IE 9]>
+    <script src="js/respond.min.js"></script>
+<![endif]-->
 </head>
 
+<body data-spy="scroll" data-target="#navigation" data-offset="120">
 
-</html>
+  <!-- *** NAVBAR ***
+_________________________________________________________ -->
+
+  <div class="navbar navbar-default navbar-fixed-top" role="navigation" id="navbar">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+        <a class="navbar-brand scrollTo" href="#intro">IT Worker</a>
+      </div>
+
+      <div class="navbar-collapse collapse" id="navigation">
+
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="#intro">Intro</a>
+          </li>
+          <li><a href="#about">About</a>
+          </li>
+          <li><a href="#services">Services</a>
+          </li>
+          <li><a href="#testimonials">Testimonials</a>
+          </li>
+          <li><a href="#references">My work</a>
+          </li>
+          <li><a href="#customers">Clients</a>
+          </li>
+          <li><a href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
+
+    </div>
+  </div>
