--- a/index.html
+++ b/index.html
@@ -1,90 +1,260 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-<!--<![endif]-->
+<html lang="en">
 
 <head>
+
   <meta charset="utf-8">
-  <meta name="robots" content="all,follow">
-  <meta name="googlebot" content="index,follow,snippet,archive">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-  <title>IT Worker | responsive portfolio template</title>
+  <title>Stylish Portfolio - Start Bootstrap Theme</title>
 
-  <meta name="keywords" content="">
-
-  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,100%7CRoboto:400,700,300,100' rel='stylesheet' type='text/css'>
-
-  <!-- Bootstrap and Font Awesome css -->
-  <link href="css/font-awesome.css" rel="stylesheet">
+  <!-- Bootstrap Core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Theme stylesheet -->
-  <link href="css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+  <!-- Custom CSS -->
+  <link href="css/style.css" rel="stylesheet">
 
-  <!-- Custom stylesheet - for your changes -->
-  <link href="css/custom.css" rel="stylesheet">
+  <!-- Custom Fonts -->
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-  <!-- owl carousel css -->
-
-  <link href="css/owl.carousel.css" rel="stylesheet">
-  <link href="css/owl.theme.css" rel="stylesheet">
-
-  <!-- CSS Animations -->
-  <link href="css/animate.css" rel="stylesheet">
-
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="favicon.png">
-
-  <!-- Mordernizr -->
-  <script src="js/modernizr-2.6.2.min.js"></script>
-
-  <!-- Responsivity for older IE -->
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
-    <script src="js/respond.min.js"></script>
-<![endif]-->
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
 
-<body data-spy="scroll" data-target="#navigation" data-offset="120">
+<body>
 
-  <!-- *** NAVBAR ***
-_________________________________________________________ -->
+  <!-- Navigation -->
+  <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+  <nav id="sidebar-wrapper">
+    <ul class="sidebar-nav">
+      <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+      <li class="sidebar-brand">
+        <a href="#top" onclick=$( "#menu-close").click();>Start Bootstrap</a>
+      </li>
+      <li>
+        <a href="#top" onclick=$( "#menu-close").click();>Home</a>
+      </li>
+      <li>
+        <a href="#about" onclick=$( "#menu-close").click();>About</a>
+      </li>
+      <li>
+        <a href="#services" onclick=$( "#menu-close").click();>Services</a>
+      </li>
+      <li>
+        <a href="#portfolio" onclick=$( "#menu-close").click();>Portfolio</a>
+      </li>
+      <li>
+        <a href="#contact" onclick=$( "#menu-close").click();>Contact</a>
+      </li>
+    </ul>
+  </nav>
 
-  <div class="navbar navbar-default navbar-fixed-top" role="navigation" id="navbar">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-        <a class="navbar-brand scrollTo" href="#intro">IT Worker</a>
-      </div>
-
-      <div class="navbar-collapse collapse" id="navigation">
-
-        <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#intro">Intro</a>
-          </li>
-          <li><a href="#about">About</a>
-          </li>
-          <li><a href="#services">Services</a>
-          </li>
-          <li><a href="#testimonials">Testimonials</a>
-          </li>
-          <li><a href="#references">My work</a>
-          </li>
-          <li><a href="#customers">Clients</a>
-          </li>
-          <li><a href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-      <!--/.nav-collapse -->
-
+  <!-- Header -->
+  <header id="top" class="header">
+    <div class="text-vertical-center">
+      <h1>Welcome</h1>
+      <br>
+      <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
     </div>
-  </div>
+  </header>
+
+  <!-- About -->
+  <section id="about" class="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2>Alex Kinuthia !</h2>
+          <p class="lead">Am a male Android Developer with the love and intrest of solving worldwide problems.</p>
+        </div>
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+
+  <!-- Services -->
+  <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
+  <section id="services" class="services bg-primary">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-lg-10 col-lg-offset-1">
+          <h2>About Me</h2>
+          <hr class="small">
+          <div class="row">
+            <div class="col-md-3 col-sm-6">
+              <div class="service-item">
+                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-music fa-stack-1x text-primary"></i>
+                            </span>
+                <h4>
+                                    <strong>Music</strong>
+                                </h4>
+                <p>I love listening to soft music especially when am coding or taking a rest.</p>
+                <a href="#" class="btn btn-light">Learn More</a>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <div class="service-item">
+                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-book fa-stack-1x text-primary"></i>
+                            </span>
+                <h4>
+                                    <strong>Reading</strong>
+                                </h4>
+                <p>Reading and me are inseperatable.Most of my time I spend time reading</p>
+                <a href="#" class="btn btn-light">Learn More</a>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <div class="service-item">
+                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-camera fa-stack-1x text-primary"></i>
+                            </span>
+                <h4>
+                                    <strong>Taking Photos</strong>
+                                </h4>
+                <p>Art is really adorable and it also expresses the current situation of someone or place</p>
+                <a href="#" class="btn btn-light">Learn More</a>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <div class="service-item">
+                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-futbol-o fa-stack-1x text-primary"></i>
+                            </span>
+                <h4>
+                                    <strong>Football</strong>
+                                </h4>
+                <p>Exercises are healthy and as for me i do exercices through playing football.</p>
+                <a href="#" class="btn btn-light">Learn More</a>
+              </div>
+            </div>
+          </div>
+          <!-- /.row (nested) -->
+        </div>
+        <!-- /.col-lg-10 -->
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+
+  <!-- Callout -->
+  <aside class="callout">
+    <div class="text-vertical-center">
+      <h1>Vertically Centered Text</h1>
+    </div>
+  </aside>
+
+  <!-- Portfolio -->
+  <section id="portfolio" class="portfolio">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 col-lg-offset-1 text-center">
+          <h2>  My Projects</h2>
+          <hr class="small">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="portfolio-item">
+                <a href="#">
+                  <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                </a>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="portfolio-item">
+                <a href="#">
+                  <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                </a>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="portfolio-item">
+                <a href="#">
+                  <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                </a>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="portfolio-item">
+                <a href="#">
+                  <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /.row (nested) -->
+          <a href="#" class="btn btn-dark">View More Items</a>
+        </div>
+        <!-- /.col-lg-10 -->
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+
+  <!-- Call to Action -->
+  <aside class="call-to-action bg-primary">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h3>The buttons below are impossible to resist.</h3>
+          <a href="#" class="btn btn-lg btn-light">Click Me!</a>
+          <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+        </div>
+      </div>
+    </div>
+  </aside>
+
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 col-lg-offset-1 text-center">
+          <h4><strong>Start Bootstrap</strong>
+                    </h4>
+          <p>3481 Melrose Place
+            <br>Beverly Hills, CA 90210</p>
+          <ul class="list-unstyled">
+            <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
+            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>
+            </li>
+          </ul>
+          <br>
+          <ul class="list-inline">
+            <li>
+              <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+            </li>
+          </ul>
+          <hr class="small">
+          <p class="text-muted">Copyright &copy; Your Website 2014</p>
+        </div>
+      </div>
+    </div>
+    <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
+  </footer>
+
+
+</body>
+
+</html>
