renamed image and modified index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <meta name="author" content="">
 
   <title>Alex Kinuthia-Portfolio</title>
+</head>
 
-  <!-- Bootstrap Core CSS -->
+<body>
+  <div class="spinner"></div>
+  <div id="bg"><img src="images/bg.JPG" alt=""></div>
+  <div clas="wrapper">
+    <div class="alex"
