--- a/blog.html
+++ b/blog.html
@@ -1,23 +1,32 @@
-<div id="single-portfolio">
-	<div id="portfolio-details" class="container">
-		<a class="close-folio-item" href="#"><i class="fa fa-times"></i></a>
-		<img class="img-responsive" src="images/portfolio/portfolio-details.jpg" alt="">
-		<div class="row">
-			<div class="col-sm-9">
-				<div class="project-info">
-					<h3>Texts about Project</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-				</div>
-			</div>
-			<div class="col-sm-3">
-				<div class="project-details">
-					<h3>Project Details</h3>
-					<p><span>Client: </span>WrapBootstrap</p>
-					<p><span>Date:</span> 15 Oct 2014</p>
-					<p><span>Tag:</span> Graphic, Design, Creative</p>
-				</div>  
-			</div>
-		</div>
-	</div>
-</div>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
+<title>Blog</title>
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/animate.min.css" rel="stylesheet">
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<link href="css/lightbox.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
+<link id="css-preset" href="css/presets/preset1.css" rel="stylesheet">
+<link href="css/responsive.css" rel="stylesheet">
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="js/jquery.inview.min.js"></script>
+<script type="text/javascript" src="js/wow.min.js"></script>
+<script type="text/javascript" src="js/mousescroll.js"></script>
+<script type="text/javascript" src="js/smoothscroll.js"></script>
+<script type="text/javascript" src="js/jquery.countTo.js"></script>
+<script type="text/javascript" src="js/lightbox.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
+<link rel="shortcut icon" href="images/favicon.ico">
+</head>
+<!--/head-->
+
+<body>
+
+	<!--.preloader-->
+	<div class="preloader"> <i class="fa fa-circle-o-notch fa-spin"></i></div>
