--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <li class="scroll active"><a href="#home">Home</a></li>
               <li class="scroll"><a href="#about-us">About Me</a></li>
               <li class="scroll"><a href="#portfolio">Projects</a></li>
-              <li class="scroll"><a href="#">Blog</a></li>
+              <li class="scroll"><a href="blog.html">Blog</a></li>
               <li class="scroll"><a href="#contact">Contact</a></li>
             </ul>
           </div>
