--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
-  <meta name="author" content="">
   <title>Alex Kinuthia</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/animate.min.css" rel="stylesheet">
@@ -20,8 +19,7 @@
     <script src="js/respond.min.js"></script>
   <![endif]-->
 
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
-  <link rel="shortcut icon" href="images/favicon.ico">
+
 </head>
 <!--/head-->
 
@@ -61,7 +59,8 @@
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               <li class="scroll active"><a href="#home">Home</a></li>
-              <li class="scroll"><a href="#about-us">About Me</a></li>
+              <li class="scroll"><a href="#services">About Me</a></li>
+              <li class="scroll"><a href="#about-us">Programming Skills</a></li>
               <li class="scroll"><a href="#portfolio">Projects</a></li>
               <li class="scroll"><a href="blog.html">Blog</a></li>
               <li class="scroll"><a href="#contact">Contact</a></li>
@@ -360,10 +359,9 @@
             <ul>
               <li><a class="envelope" href="#"><i class="fa fa-envelope"></i></a></li>
               <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+              <li><a class="github" href="#"><i class="fa fa-github"></i></a></li>
               <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a class="tumblr" href="#"><i class="fa fa-tumblr-square"></i></a></li>
             </ul>
           </div>
         </div>
