--- a/blog.html
+++ b/blog.html
@@ -1,28 +1,25 @@
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
-<title>Blog</title>
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/animate.min.css" rel="stylesheet">
-<link href="css/font-awesome.min.css" rel="stylesheet">
-<link href="css/lightbox.css" rel="stylesheet">
-<link href="css/main.css" rel="stylesheet">
-<link id="css-preset" href="css/presets/preset1.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-<script type="text/javascript" src="js/jquery.inview.min.js"></script>
-<script type="text/javascript" src="js/wow.min.js"></script>
-<script type="text/javascript" src="js/mousescroll.js"></script>
-<script type="text/javascript" src="js/smoothscroll.js"></script>
-<script type="text/javascript" src="js/jquery.countTo.js"></script>
-<script type="text/javascript" src="js/lightbox.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
-<link rel="shortcut icon" href="images/favicon.ico">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<title>Alex Kinuthia</title>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/animate.min.css" rel="stylesheet">
+	<link href="css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/lightbox.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+	<link id="css-preset" href="css/presets/preset1.css" rel="stylesheet">
+	<link href="css/responsive.css" rel="stylesheet">
+
+	<!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
+  <![endif]-->
+
+
 </head>
 <!--/head-->
 
@@ -30,3 +27,43 @@
 
 	<!--.preloader-->
 	<div class="preloader"> <i class="fa fa-circle-o-notch fa-spin"></i></div>
+	<!--/.preloader-->
+
+	<header id="home">
+		<div id="home-slider" class="carousel slide carousel-fade" data-ride="carousel">
+
+			<img src="images/aleki.jpg" style="background-size: cover" width="1400px">
+
+			<div class="caption">
+				<h1 class="animated fadeInLeftBig">Hi! I'm <span>Alex</span></h1>
+				<p class="animated fadeInRightBig">Welocome to my blog</p>
+				<a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Explore Me</a>
+			</div>
+		</div>
+		<a id="tohash" href="#services"><i class="fa fa-angle-down"></i></a>
+
+
+		<!--/#home-slider-->
+		<div class="main-nav">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+					<a class="navbar-brand" href="index.html">
+
+					</a>
+				</div>
+				<div class="collapse navbar-collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="scroll active"><a href="#home">Home</a></li>
+						<li class="scroll"><a href="blog.html">Blog</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<!--/#main-nav-->
+	</header>
