--- a/index.html
+++ b/index.html
@@ -32,43 +32,44 @@
   <header id="home">
     <div id="home-slider" class="carousel slide carousel-fade" data-ride="carousel">
 
-      <div class="item active" style="background-image: url(images/moringa.jpg)">
-        <div class="caption">
-          <h1 class="animated fadeInLeftBig">Hi am <span>Alex</span></h1>
-          <p class="animated fadeInRightBig">I am a front end Android Developer</p>
-          <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Explore Me</a>
-        </div>
+      <img src="images/aleki.jpg" style="background-size: cover" width="1400px">
+
+      <div class="caption">
+        <h1 class="animated fadeInLeftBig">Hi! I'm <span>Alex</span></h1>
+        <p class="animated fadeInRightBig">FrontEnd Android Developer</p>
+        <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Explore Me</a>
       </div>
-      <a id="tohash" href="#services"><i class="fa fa-angle-down"></i></a>
+    </div>
+    <a id="tohash" href="#services"><i class="fa fa-angle-down"></i></a>
 
 
-      <!--/#home-slider-->
-      <div class="main-nav">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+    <!--/#home-slider-->
+    <div class="main-nav">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="index.html">
 
-            </a>
-          </div>
-          <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <li class="scroll active"><a href="#home">Home</a></li>
-              <li class="scroll"><a href="#services">About Me</a></li>
-              <li class="scroll"><a href="#about-us">Programming Skills</a></li>
-              <li class="scroll"><a href="#portfolio">Projects</a></li>
-              <li class="scroll"><a href="blog.html">Blog</a></li>
-              <li class="scroll"><a href="#contact">Contact</a></li>
-            </ul>
-          </div>
+          </a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="scroll active"><a href="#home">Home</a></li>
+            <li class="scroll"><a href="#services">About Me</a></li>
+            <li class="scroll"><a href="#about-us">Programming Skills</a></li>
+            <li class="scroll"><a href="#portfolio">Projects</a></li>
+            <li class="scroll"><a href="blog.html">Blog</a></li>
+            <li class="scroll"><a href="#contact">Contact</a></li>
+          </ul>
         </div>
       </div>
-      <!--/#main-nav-->
+    </div>
+    <!--/#main-nav-->
   </header>
   <!--/#home-->
   <section id="services">
@@ -77,8 +78,8 @@
         <div class="row">
           <div class="text-center col-sm-8 col-sm-offset-2">
             <h2>About Me</h2>
-            <p>I have been coding for the past 5 months.I love creating software and building systems that help users interact with them .I participated in the <strong>NASA SPACE CHALLENGE</strong>and our team won the people's choice award.The following
-              are my hobbies:</p>
+            <p>I have been coding for the past 5 months. I love creating Software and Building systems that help users interact efficiently and effectively. I participated in the <strong>  <a href="https://2017.spaceappschallenge.org/">NASA SPACE CHALLENGE</a></strong>              and our team won the People's Choice Award for Nairobi, Kenya. Pretty cool, right? :)
+            </p>
           </div>
         </div>
       </div>
@@ -98,7 +99,7 @@
               <i class="fa fa-music"></i>
             </div>
             <div class="service-info">
-              <h3>Djying</h3>
+              <h3>Music</h3>
             </div>
           </div>
           <div class="col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="550ms">
@@ -106,7 +107,7 @@
               <i class="fa fa-heart"></i>
             </div>
             <div class="service-info">
-              <h3>Helping needy</h3>
+              <h3>Helping Needy</h3>
             </div>
           </div>
           <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="650ms">
@@ -114,7 +115,7 @@
               <i class="fa fa-futbol-o"></i>
             </div>
             <div class="service-info">
-              <h3>Playing football</h3>
+              <h3>Playing Football</h3>
             </div>
           </div>
           <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="750ms">
@@ -130,7 +131,7 @@
               <i class="fa fa-book"></i>
             </div>
             <div class="service-info">
-              <h3>Reading books</h3>
+              <h3>Reading Books</h3>
             </div>
           </div>
         </div>
@@ -156,21 +157,21 @@
                 </div>
               </div>
               <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                <p class="lead">Angular</p>
+                <p class="lead">Html/Css</p>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="60">60%</div>
-                </div>
-              </div>
-              <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                <p class="lead">Ember</p>
-                <div class="progress">
-                  <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="70">70%</div>
+                  <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="90">90%</div>
                 </div>
               </div>
               <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                 <p class="lead">Firebase</p>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="85">85%</div>
+                  <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="75">75%</div>
+                </div>
+              </div>
+              <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                <p class="lead">Angular</p>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="60">60%</div>
                 </div>
               </div>
             </div>
@@ -183,21 +184,21 @@
               </div>
             </div>
             <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="400ms">
-              <p class="lead">Java</p>
+              <p class="lead">UI/UX</p>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="75">75%</div>
+                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="65">65%</div>
               </div>
             </div>
             <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-              <p class="lead">Jquery</p>
+              <p class="lead">UI/UX</p>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="65">65%</div>
+              </div>
+            </div>
+            <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
+              <p class="lead">JQuery</p>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="60">60%</div>
-              </div>
-            </div>
-            <div class="single-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-              <p class="lead">UI/UX Design</p>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary six-sec-ease-in-out" role="progressbar" aria-valuetransitiongoal="70">70%</div>
               </div>
             </div>
           </div>
@@ -208,92 +209,91 @@
     <!--/#about-us-->
 
     <section id="portfolio">
-      <div class="container">
-        <div class="row">
-          <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
-            <h2>My Projects</h2>
-          </div>
+      <div style="margin-bottom:-10%">
+        <div class="heading text-center col-sm-8 col-sm-offset-2 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
+          <h2>My Projects</h2>
         </div>
-      </div>
-      <section id="projects" class="section scrollspy">
-        <div class="clearfix">
-          <h3></h3>
-          <div class="container">
-            <div class="row">
-              <!-- Code Island-->
-              <div class="col-md-4">
-                <a href="http://playr-project.herokuapp.com/"><img src="images/playr.jpg" width="200px"></a>
-                <h2>Playr</h2>
-                <p>A custom playlist maker</p>
-                <p><strong>Accomplishments</strong></p>
-                <p>
-                  Created the user page.<br> Created the outlook structure of the web application
-                  <br>Created the user login and the user create playlist.<br>
-                </p>
+
+        <section id="projects" class="section scrollspy">
+          <div class="clearfix">
+            <h3></h3>
+            <div class="container">
+              <div class="row">
+                <!-- Code Island-->
+                <div class="col-md-4">
+                  <a href="http://playr-project.herokuapp.com/"><img src="images/playr.jpg" width="200px"></a>
+                  <h2>Playr</h2>
+                  <p>A custom playlist maker</p>
+                  <p><strong>Accomplishments</strong></p>
+                  <p>
+                    Created the user page.<br> Created the outlook structure of the web application
+                    <br>Created the user login and the user create playlist.<br>
+                  </p>
+                </div>
+                <!-- Saved By the Text-->
+                <div class="col-md-4">
+                  <a href="https://wildlife-track.herokuapp.com/"><img src="images/news.png" width="230px"></a>
+                  <h2>Update</h2>
+                  <p>Update is a daily information news app that enables the user to view trending news allover the world.</p>
+                  <p><strong>Accomplishments</strong></p>
+                  <p>
+                    Deployed app to appetize.io.<br> created the outlook structure of the app.<br> Incoperated newsApi key to fetch real time data.<br>
+                  </p>
+                </div>
+                <!-- Skate Something-->
+                <div class="col-md-4">
+                  <a href="https://contactms.herokuapp.com/"><img src="images/contact.jpg" width="200px"></a>
+                  <h2>Contact Manager</h2>
+                  <p>This is a messenger dashboard for contact management within the organization</p>
+                  <p><strong>Accomplishments</strong></p>
+                  <p>
+                    Created the chatbox.<br> Enabled the admin to save,delete and update contacts.
+                    <br>Structured outlook of the index.hbs.
+                    <br>Incoperated the clender.hbs.<br>
+                  </p>
+                </div>
               </div>
-              <!-- Saved By the Text-->
-              <div class="col-md-4">
-                <a href="https://wildlife-track.herokuapp.com/"><img src="images/news.png" width="230px"></a>
-                <h2>Update</h2>
-                <p>Update is a daily information news app that enables the user to view trending news allover the world.</p>
-                <p><strong>Accomplishments</strong></p>
-                <p>
-                  Deployed app to appetize.io.<br> created the outlook structure of the app.<br> Incoperated newsApi key to fetch real time data.<br>
-                </p>
-              </div>
-              <!-- Skate Something-->
-              <div class="col-md-4">
-                <a href="https://contactms.herokuapp.com/"><img src="images/contact.jpg" width="200px"></a>
-                <h2>Contact Manager</h2>
-                <p>This is a messenger dashboard for contact management within the organization</p>
-                <p><strong>Accomplishments</strong></p>
-                <p>
-                  Created the chatbox.<br> Enabled the admin to save,delete and update contacts.
-                  <br>Structured outlook of the index.hbs.
-                  <br>Incoperated the clender.hbs.<br>
-                </p>
+              <div class="row">
+                <!-- Jichunge-->
+                <div class="col-md-4">
+                  <a href="https://play.google.com/store/search?q=jichunge"><img src="images/jichunge.png" width="150px"></a>
+                  <h2>Jichunge</h2>
+                  <p>This is an android application which notifies the users emergency contacts by sms</p>
+                  <p><strong>Accomplishments</strong></p>
+                  <p>
+                    Designed xmls of the app.<br> Helped in launching the app at playstore.<br>Created and styled the widget.<br>Helped in intergrating the google api key.
+                  </p>
+                </div>
+                <!-- Message board-->
+                <div class="col-md-4">
+                  <a href="https://github.com/Alex-Kinuthia/Wildlife-Tracker-App7"><img src="images/wildlife.png" width="150px"></a>
+                  <h2>Wildlife-Tracker-App7</h2>
+                  <p>This is application that allows Rangers to track wildlife sightings in the area</p>
+                  <p><strong>Accomplishments</strong></p>
+                  <p>Hosted the app at Heroku.<br> Created the database(wildlife_tracker);
+                    <br> Used Emberjs to create the app<br>Added node to enable it to be hosted at Heroku.<br>Made the app responsive.
+                  </p>
+                </div>
+                <!-- e-commerce-->
+                <div class="col-md-4">
+                  <a href="https://pacific-journey-65386.herokuapp.com/"><img src="images/saloon.jpg" width="150px"></a>
+                  <h2>Saloon</h2>
+                  <p>The owner of the saloon should be able to add a list of the stylists, and for each stylist, add clients who see that stylist.</p>
+                  <p><strong>Accomplishments</strong></p>
+                  <p>
+                    Hosted the app at Heroku.<br> Created the app using Emberjs<br>Added node to enable it to be hosted at Heroku.<br>Made the app responsive
+                  </p>
+                </div>
               </div>
             </div>
-            <div class="row">
-              <!-- Jichunge-->
-              <div class="col-md-4">
-                <a href="https://play.google.com/store/search?q=jichunge"><img src="images/jichunge.png" width="150px"></a>
-                <h2>Jichunge</h2>
-                <p>This is an android application which notifies the users emergency contacts by sms</p>
-                <p><strong>Accomplishments</strong></p>
-                <p>
-                  Designed xmls of the app.<br> Helped in launching the app at playstore.<br>Created and styled the widget.<br>Helped in intergrating the google api key.
-                </p>
-              </div>
-              <!-- Message board-->
-              <div class="col-md-4">
-                <a href="https://github.com/Alex-Kinuthia/Wildlife-Tracker-App7"><img src="images/wildlife.png" width="150px"></a>
-                <h2>Wildlife-Tracker-App7</h2>
-                <p>This is application that allows Rangers to track wildlife sightings in the area</p>
-                <p><strong>Accomplishments</strong></p>
-                <p>Hosted the app at Heroku.<br> Created the database(wildlife_tracker);
-                  <br> Used Emberjs to create the app<br>Added node to enable it to be hosted at Heroku.<br>Made the app responsive.
-                </p>
-              </div>
-              <!-- e-commerce-->
-              <div class="col-md-4">
-                <a href="https://pacific-journey-65386.herokuapp.com/"><img src="images/saloon.jpg" width="150px"></a>
-                <h2>Saloon</h2>
-                <p>The owner of the saloon should be able to add a list of the stylists, and for each stylist, add clients who see that stylist.</p>
-                <p><strong>Accomplishments</strong></p>
-                <p>
-                  Hosted the app at Heroku.<br> Created the app using Emberjs<br>Added node to enable it to be hosted at Heroku.<br>Made the app responsive
-                </p>
-              </div>
-            </div>
+          </div>
+        </section>
+        <div id="portfolio-single-wrap">
+          <div id="portfolio-single">
           </div>
         </div>
-      </section>
-      <div id="portfolio-single-wrap">
-        <div id="portfolio-single">
-        </div>
+        <!-- /#portfolio-single-wrap -->
       </div>
-      <!-- /#portfolio-single-wrap -->
     </section>
     <!--/#portfolio-->
     <!--/#pricing-->
