--- a/index.html
+++ b/index.html
@@ -387,12 +387,12 @@
           </div>
           <div class="col-sm-6">
 
+            <p class="pull-right">Crafted by <a href="">Alex Kinuthia</a></p>
+
           </div>
         </div>
       </div>
     </div>
-  </footer>
-
 
 </body>
 
