--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="caption">
         <h1 class="animated fadeInLeftBig">Hi! I'm <span>Alex</span></h1>
-        <p class="animated fadeInRightBig">Welcome to my Blog</p>
+        <p class="animated fadeInRightBig">Welcome to my Portfolio</p>
 
       </div>
     </div>
